default/gateways/default-httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect-whereami-frontend
  namespace: whereami-frontend
  labels: 
    gateway: whereami-frontend
spec:
  parentRefs:
  - kind: Gateway
    name: whereami-frontend
    namespace: whereami-frontend
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
