default/gateways/default-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whereami-frontend
  namespace: whereami-frontend
  labels: 
    gateway: whereami-frontend
spec:
  parentRefs:
  - kind: Gateway
    name: whereami-frontend
    namespace: whereami-frontend
    sectionName: https
  hostnames:
  - "frontend.endpoints.fleets-argocd-demo.cloud.goog"
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: whereami-frontend
      namespace: whereami-frontend
      port: 8080
